Fix config files with tailwind, add darkmode scrollbar

--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -17,3 +17,7 @@ body {
   min-height: 100%;
   width: 100%;
 }
+
+.dark {
+  color-scheme: dark;
+}
